--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html class="no-js" lang="">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>SeeSo Web Sample</title>
-    <link rel="stylesheet" href="/main.70edf2ca.css">
-  <script src="/main.70edf2ca.js"></script></head>
+    <link rel="stylesheet" href="../css/main.css" />
+  </head>
 
   <body>
     <div id="heatMap" style="position: relative; height: 1000px; width: 1000px;">
@@ -33,7 +33,7 @@
         Click me to use calibration service
       </button>
       <button id="nextButton" type="button">Next Page</button>
-      <script src="/scripts.bcf3243b.js"></script>
+      <script src="./scripts/index.js"></script>
     </div>
   </body>
 </html>
