--- a/src/public/index.html
+++ b/src/public/index.html
@@ -7,29 +7,37 @@
   </head>
 
   <body>
+    <h1 id="gazeheader" style="text-align: center; z-index: -1">
+      ระบบช่วยประเมินภาวะความจำเสื่อมโดยเทคนิคการติดตามดวงตา
+    </h1>
+
+    <div id="buttons" class="container">
+      <button id="calibrationButton" style="left: 0; right: 0">
+        Start
+      </button>
+    </div>
+
     <div
       id="heatMap"
       style="
-        position: relative;
+      display: none;
+      background-position: center;
+      background-image: url(../assets/trail_making_trans.png);
+      background-repeat: no-repeat;  
+      position: absolute;
+      width: 100vw;
         height: 100vh;
       "
     >
-      <h1 id="gazeheader" style="text-align: center; z-index: -1">
-        ระบบช่วยประเมินภาวะความจำเสื่อมโดยเทคนิดการติดตามดวงตา
-      </h1>
-      <h2 id="gazeInfo" style="text-align: center"></h2>
-      <img
+      
+      <!-- <img
         id="myimg"
-        src="../assets/trail-making.png"
+        src="../assets/trail_making_trans.png"
         alt=""
         style="object-fit: scale-down; display: none"
         class="center"
-      />
-      <div id="buttons" class="container">
-        <button id="calibrationButton" style="left: 0; right: 0">
-          Start
-        </button>
-      </div>
+      /> -->
+      
     </div>
 
     <div class="container" style="margin-top: 20px;">
