--- a/src/public/index.html
+++ b/src/public/index.html
@@ -10,7 +10,21 @@
     <h1 id="gazeheader" style="text-align: center; z-index: -1">
       ระบบช่วยประเมินภาวะความจำเสื่อมโดยเทคนิคการติดตามดวงตา
     </h1>
-
+    <div id="detail" style="margin-left: 100px;">
+      <h3 style="font-size: 24px;">
+        วิธีการใช้งาน
+      </h3>
+      <pre style="font-size: 18px;">
+        1. กดปุ่ม Start เพื่อเริ่มการทำงาน
+        2. เลือกขนาดของหน้าจอ และระยะห่างจากกล้องถึงใบหน้า
+        3. มองตามจุดต่าง ๆ ให้ครบ 5 จุด
+        4. กดปุ่ม Finish เพื่อจบการปรับเทียบและเริ่มการทดสอบ
+        5. มองตัวเลขตั้งแต่ 1 ถึง 10 ตามลำดับ โดยมองตัวเลขละ 5 วินาที
+        6. เมื่อมองจนถึงเลข 10 แล้ว ให้กดปุ่ม Finish ที่ด้านล่างของจอ
+        7. กดปุ่ม Save เพื่อทำการบันทึกผลในรูปแบบของรูปภาพ
+        8. กดปุ่ม Complete เพื่อเสร็จสิ้นการทำงาน
+      </pre>
+    </div>
     <div id="buttons" class="container">
       <button id="calibrationButton" style="left: 0; right: 0">
         Start
@@ -29,14 +43,6 @@
         height: 100vh;
       "
     >
-      
-      <!-- <img
-        id="myimg"
-        src="../assets/trail_making_trans.png"
-        alt=""
-        style="object-fit: scale-down; display: none"
-        class="center"
-      /> -->
       
     </div>
 
