--- a/src/public/index.html
+++ b/src/public/index.html
@@ -7,49 +7,63 @@
   </head>
 
   <body>
-    <h1 id="gazeheader" style="text-align: center; z-index: -1">
-      ระบบช่วยประเมินภาวะความจำเสื่อมโดยเทคนิคการติดตามดวงตา
-    </h1>
-    <div id="detail" style="margin-left: 100px;">
-      <h3 style="font-size: 28px;">
-        วิธีการใช้งาน
-      </h3>
-      <pre style="font-size: 24px;">
-        1. กดปุ่ม Start เพื่อเริ่มการทำงาน
-        2. เลือกขนาดของหน้าจอ และระยะห่างจากกล้องถึงใบหน้า
-        3. มองตามจุดต่าง ๆ ให้ครบ 5 จุด
-        4. กดปุ่ม Finish เพื่อจบการปรับเทียบและเริ่มการทดสอบ
-        5. มองตัวเลขตั้งแต่ 1 ถึง 10 ตามลำดับ โดยมองตัวเลขละ 5 วินาที
-        6. เมื่อมองจนถึงเลข 10 แล้ว ให้กดปุ่ม Finish ที่ด้านล่างของจอ
-        7. กดปุ่ม Save เพื่อทำการบันทึกผลในรูปแบบของรูปภาพ
-        8. กดปุ่ม Complete เพื่อเสร็จสิ้นการทำงาน
-      </pre>
-    </div>
-    <div id="buttons" class="container">
-      <button id="calibrationButton" style="left: 0; right: 0">
-        Start
-      </button>
+    <script>
+      function parseCalibrationDataInQueryString() {
+        const href = window.location.href;
+        const decodedURI = decodeURI(href);
+        const queryString = decodedURI.split("?")[1];
+        if (!queryString) return undefined;
+        const jsonString = queryString.slice(
+          "calibrationData=".length,
+          queryString.length
+        );
+        return jsonString;
+      }
+    </script>
+    <div id="instruction">
+      <script>
+        if(parseCalibrationDataInQueryString()){
+          document.getElementById("instruction").style.display = "none";
+        }
+      </script>
+      <h1 id="gazeheader" style="text-align: center; z-index: -1">
+        ระบบช่วยประเมินภาวะความจำเสื่อมโดยเทคนิคการติดตามดวงตา
+      </h1>
+      <div id="detail" style="margin-left: 100px">
+        <h3 style="font-size: 28px">วิธีการใช้งาน</h3>
+        <pre style="font-size: 24px">
+          1. กดปุ่ม Start เพื่อเริ่มการทำงาน
+          2. เลือกขนาดของหน้าจอ และระยะห่างจากกล้องถึงใบหน้า
+          3. มองตามจุดต่าง ๆ ให้ครบ 5 จุด
+          4. กดปุ่ม Finish เพื่อจบการปรับเทียบและเริ่มการทดสอบ
+          5. มองตัวเลขตั้งแต่ 1 ถึง 10 ตามลำดับ โดยมองตัวเลขละ 5 วินาที
+          6. เมื่อมองจนถึงเลข 10 แล้ว ให้กดปุ่ม Finish ที่ด้านล่างของจอ
+          7. กดปุ่ม Save เพื่อทำการบันทึกผลในรูปแบบของรูปภาพ
+          8. กดปุ่ม Complete เพื่อเสร็จสิ้นการทำงาน
+        </pre>
+      </div>
+      <div id="buttons" class="container">
+        <button id="calibrationButton" style="left: 0; right: 0">Start</button>
+      </div>
     </div>
 
     <div
       id="heatMap"
       style="
-      display: none;
-      background-position: center;
-      background-image: url(../assets/trail_making_trans.png);
-      background-repeat: no-repeat;  
-      position: absolute;
-      width: 100vw;
+        display: none;
+        background-position: center;
+        background-image: url(../assets/trail_making_trans.png);
+        background-repeat: no-repeat;
+        position: absolute;
+        width: 100vw;
         height: 100vh;
       "
-    >
-      
-    </div>
+    ></div>
 
-    <div class="container" style="margin-top: 20px;">
-      <button id="finBtn" type="button" style="display: none;">Finish</button>
-      <button id="saveBtn" type="button" style="display: none;">Save</button>
-      <button id="compBtn" type="button" style="display: none;">Complete</button>
+    <div class="container" style="margin-top: 20px">
+      <button id="finBtn" type="button" style="display: none">Finish</button>
+      <button id="saveBtn" type="button" style="display: none">Save</button>
+      <button id="compBtn" type="button" style="display: none">Complete</button>
     </div>
 
     <script src="./scripts/index.js"></script>
