--- a/src/public/index.html
+++ b/src/public/index.html
@@ -55,10 +55,12 @@
         background-image: url(../assets/trail_making_trans.png);
         background-repeat: no-repeat;
         position: absolute;
-        width: 100vw;
         height: 100vh;
+        width: 100vw;
       "
-    ></div>
+    >
+  <canvas id="canvas"></canvas>
+  </div>
 
     <div class="container" style="margin-top: 20px">
       <button id="finBtn" type="button" style="display: none">Finish</button>
